--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.32.2
-google-generativeai>=0.4.1,<0.6
-Pillow>=10.2.0
+streamlit>=1.30.0
+google-generativeai>=0.8.0
+pillow>=10.0.0
+
 
 
 
